[gd_scene load_steps=4 format=3 uid="uid://bqn3nget0i00d"]

[ext_resource type="Script" path="res://UI/Inventory/inventory_dialogue.gd" id="1_htwjq"]
[ext_resource type="PackedScene" uid="uid://dr847pofivlih" path="res://UI/Inventory/item_slot.tscn" id="2_kkd68"]
[ext_resource type="PackedScene" uid="uid://b8dnuujojdyes" path="res://UI/ItemGrid/item_grid.tscn" id="3_laepp"]

[node name="InventoryDialogue" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_htwjq")
slot_scene = ExtResource("2_kkd68")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="GridContainer" parent="VBoxContainer" instance=ExtResource("3_laepp")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
